--- a/src/Pages/QueroDoar/queroDoar.module.scss
+++ b/src/Pages/QueroDoar/queroDoar.module.scss
@@ -1,6 +1,53 @@
 .principal{
-    border: solid 2px red;
+    
     height: 80vh;
     display: flex;
     justify-content: center;
+}
+
+.container{
+    width: 60vw;
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+form{
+    border: solid 2px #005695; 
+    width: 25vw;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 20px;
+    div{
+        
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        color: #005695;
+    }
+    input{
+        width: 22vw;
+        height: 5vh;
+        border:  solid 2px #005695;
+        border-radius: 10px;
+        outline: none;
+        padding-left: 20px;
+        &::placeholder{
+            color: black;
+        }
+    }
+}
+input:nth-child(6){
+    background-color: #005695;
+    width: 10vw;
+    height: 6vh;
+    padding-left: 0;
+    color: white;
+    font-size: 17px;
 }
