feat: responsivo header

--- a/src/Pages/Inicio/inicio.module.scss
+++ b/src/Pages/Inicio/inicio.module.scss
@@ -50,3 +50,15 @@
         }
     }
 }
+
+@media(max-width: 1200px){
+    .banner{
+        background-size: cover;
+    }
+}
+
+@media(max-width: 860px){
+    .banner{
+        background-position: center;
+    }
+}
