--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -25,9 +25,9 @@ header{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        font-size: 20px;
         a{
             color: white;
-            font-size: 20px;
         }
     }
 }
@@ -42,6 +42,7 @@ header{
     justify-content: space-around;
     border-radius: 15px;
     input{
+        width: 12vw;
         background-color: transparent;
         outline: none;
         border: none;
@@ -49,6 +50,65 @@ header{
         font-size: 15px;
         &::placeholder{
             color: white;
+        }
+    }
+}
+
+@media(max-width: 1134px){
+
+    .boxLogo{
+        
+        width: 25vw;
+        h1{
+            font-size: 1.9vw;
+        }
+        img{
+            width: 5vw;
+        }
+    }
+
+    .boxMenu{
+        
+        ul{   
+            font-size: 1.7vw;
+        }
+    }
+
+    .boxInput{
+        width: 18vw;
+        input{
+        &::placeholder{
+          font-size: 1.2vw;
+        }
+    }
+    }
+}
+
+@media(max-width: 760px){
+    header{
+        height: 25vh;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .boxInput{
+        display: none;
+    }
+    .boxLogo{
+        width: 80%;
+        
+        h1{
+            font-size: 25px;
+        }
+        img{
+            width: 60px;
+        }
+    }
+
+    .boxMenu{
+        width: 100%;
+        ul{
+            justify-content: space-evenly;
+            font-size: 22px;
         }
     }
 }
